[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/sound/PlayBackground.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/sound/Loss.wav" type="AudioStream" id=2]
[ext_resource path="res://Scripts/SoundMiniScene.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
[connection signal="finished" from="BackgroundMusic" to="." method="_on_BackgroundMusic_finished"]
